# fc-basic-mirror

./: .eslintrc.yml  .gitignore  Cargo.toml  package.json  tailwind.config.js  webpack.config.js
db/: databases.sql  insert_card.sql  roles.sql  select_cards.sql  tables.sql  upsert_card.sql  values.sql
src/: db.rs  handlers.rs  main.rs
src/schemas/: card.rs  mod.rs  root.rs
static/: index.html  index.js
static/components/: Application.svelte  Button.svelte  CardItem.svelte  Container.svelte  Creator.svelte  Dashboard.svelte  Editor.svelte  Flashcard.svelte  IconButton.svelte  Search.svelte  Toolbar.svelte  Workspace.svelte
static/models/: Card.js  UI.js  index.js
static/providers/: Card.js  Master.js
