[package]
name = "flashcards-basic"
version = "0.1.0"
authors = ["Alexander Welshtein <alexanderwelshtein@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-files = "0.6.0-beta.6"
async-graphql = "2.9.12"
async-graphql-actix-web = "2.9.12"
serde_json = "1.0.66"
chrono = "0.4.19"
chrono-tz = "0.5.3"
sqlx = { version = "0.5.7", features = ["runtime-actix-native-tls", "postgres", "chrono"] }
env_logger = "0.9.0"
log = "0.4.14"